[package]
name = "random_access_rng"
version = "0.1.0"
edition = "2024"

[lib]
name = "random_access_rng"
path = "src/lib.rs"

[dependencies]
rand_core = "0.9.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
xxh3_derive = { path = "./xxh3_derive" }
xxh3_trait = { path = "./xxh3_trait" }

[dev-dependencies]
xxh3_derive = { path = "./xxh3_derive" }

[features]
default = ["derive"]
derive = []

[workspace]
members = [".", "xxh3_derive", "xxh3_trait"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rand_core = "0.9.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
syn = "2.0"
quote = "1.0"