[package]
name = "random_access_rng"
version = "0.1.0"
edition = "2024"
description = "A deterministic random number generator with hierarchical seeding and random access capabilities"
license = "MIT"
repository = "https://github.com/yourusername/random_access_rng"
documentation = "https://docs.rs/random_access_rng"
readme = "README.md"
keywords = ["random", "rng", "procedural", "generation", "deterministic", "xxhash", "hierarchical"]
categories = ["algorithms", "simulation", "game-development"]
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "random_access_rng"
path = "src/lib.rs"

[dependencies]
rand_core = "0.9.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
rand = "0.9.1"

