[package]
name = "random_access_rng"
version = "0.1.0"
edition = "2024"
description = "A deterministic random number generator with hierarchical seeding and random access functionality"
license-file = "license"
repository = "https://github.com/ray33ee/random_access_rng"
documentation = "https://docs.rs/random_access_rng"
readme = "README.md"
keywords = ["random", "rng", "deterministic", "xxhash", "hierarchical"]
categories = ["algorithms", "simulation", "game-development"]

[dependencies]
rand_core = "0.9.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
rand = "0.9.1"

